--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h1>🚅 Jízdní řády</h1>
     
     <div class="search-box">
-        <input type="text" id="from" value="Praha" placeholder="Odkud">
-        <input type="text" id="to" value="Brno" placeholder="Kam">
+        <input type="text" id="from" value="" placeholder="Odkud">
+        <input type="text" id="to" value="" placeholder="Kam">
         <button onclick="search()">Vyhledat spojení</button>
     </div>
     
