--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Vyhledávač spojení</title>
+    <title>Můj Somewhere</title>
     <style>
         body { font-family: sans-serif; max-width: 800px; margin: 20px auto; padding: 20px; background-color: #fafafa; }
         .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
@@ -20,13 +20,13 @@
 </head>
 <body>
     <div class="header">
-        <h1>🚅 Jízdní řády</h1>
-        <a href="admin.html" class="login-btn">🔒 Přihlášení pro zaměstnance</a>
+        <h1>Jízdní řády</h1>
+        <a href="admin.html" class="login-btn">Přihlášení pro zaměstnance</a>
     </div>
     
     <div class="search-box">
-        <input type="text" id="from" value="Praha" placeholder="Odkud">
-        <input type="text" id="to" value="Brno" placeholder="Kam">
+        <input type="text" id="from" value="" placeholder="Odkud">
+        <input type="text" id="to" value="" placeholder="Kam">
         <button onclick="search()">Vyhledat spojení</button>
     </div>
     
